# WEB_HW11

./: .env  .env_example  main.py  pyproject.toml  requirements.txt  test.db
docs/: index.rst
migrations/: env.py
migrations/versions/: 03d7c31bb656_init.py  1f0e0d0cdd89_avatar.py  2012faa3ff83_.py  56cf1c7ab7d0_.py  6547e7985f96_.py  d10770d4c774_user_updata.py
src/: schema_user.py  schemas.py
src/database/: model_user.py  models.py
src/repository/: contacts.py  users.py  utils.py
src/routes/: contacts.py  users.py
src/services/: email.py
tests/: conftest.py  test_route_user.py  test_unit_repository_contacts.py
